--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "bootstrap": "^4.2.1",
-    "eslint": "^5.12.0",
+    "eslint": "5.6.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
