--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MisaZander/nocturnal-breeze#readme",
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "eslint": "5.6.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
