--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
     "passport": "^0.4.0",
